# BAMBI_MOT

./: .gitignore  README(Track).md  README.md  config.example.yaml  pyproject.toml
annotations/: instances_test.json  instances_val.json
data/: flight_keys.json
detection_models/: .gitignore  benchmark_speed.sh  data.yaml  docker-compose.yml  pyproject.toml  readme.md  train_all.sh
detection_models/reports/: _make_annotation_examples.py  speed_report.md
detection_models/rf-detr-l/: train.py
detection_models/rf-detr-s/: train.py
detection_models/tools/: _dataset_utils.py  benchmark.py  log_yolo_metric_aliases.py  make_presentation_plots.py  make_report.py  make_rfdetr_view.py  make_subset.py  report_to_pdf.py  rfdetr_confusion_matrix.py
detection_models/yolo26-l/: train.py
detection_models/yolo26-s/: train.py
notebooks/: 01_Exploration.ipynb  02_Download.ipynb  03_Format_Conversion.ipynb  04_Frame_Extraction.ipynb  05_Data_Split.ipynb  06_Run_Tracker.ipynb  07_Benchmark_Tracker.ipynb
presentation/: CIV_project_presentation.pptx  make_pdf.py  presentation.md  report_for_presentation.md
presentation/images/: tt_metrics_table.csv
src/: annotation_process.py  config.py
transformer_tracking/: README.md  eval.py  infer.py  precompute.sh  precompute_embeddings.py  probe_rfdetr_embeddings.py  track_eval.sh  train.py  train.sh
transformer_tracking/docs/: make_pdf.py  make_report_assets.py  report.md
transformer_tracking/model/: matching.py  rfdetr_backbone.py  track_module.py
