[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bambi-mot"
version = "0.1.0"
description = "Benchmarking and improving Multi-Object Tracking for aerial wildlife monitoring using the BAMBI dataset"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Detection
    "ultralytics>=8.0.0",

    # Tracking
    "boxmot>=10.0.0",

    # Evaluation
    "trackeval",

    # Data handling
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",

    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Geo / DEM tools (used by BAMBI scripts)
    "pyproj>=3.5.0",
    "rasterio>=1.3.0",

    # Utilities
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest>=7.4.0",
]

colab = [
    # Lighter install for Colab — skips dev tools
    "ultralytics>=8.0.0",
    "boxmot>=10.0.0",
    "trackeval",
    "opencv-python-headless>=4.8.0",  # headless for server environments
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]

[project.urls]
Repository = https://github.com/Navid-alt/BAMBI_MOT.git
Dataset = "https://github.com/bambi-eco/Dataset"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I"]   # pycodestyle, pyflakes, isort
ignore = ["E501"]           # line length handled by black

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]